2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Optimized. Do nothing in
	HandleParameterCompletion unless the char is going to trigger a
	parameter completion.

	* md1format.xml: Added missing property.

	* CSharpBindingCompilerManager.cs: Improve error message when an
	assembly is not found.

	* gtk-gui/gui.stetic: Update.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp:
	* Autotools/Autotools.mdp: All projects now require fx 3.5.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs:
	* Autotools/CSharpAutotoolsSetup.cs: Track API changes.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.mdp: Don't require a specific version of Mono.Addins.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/CSharpTextEditorIndentation.cs: Track api changes.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/MemberCompletionData.cs: Use full names in the description of the
	members. Fixes bug #450931 - Autocomplete without namespaces is
	confusing.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* CSharpBinding.mdp: Add AssemblyInfo.cs files that are autogenerated
	from the addin manifests.

2008-11-29  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs:
	* Gui/MemberCompletionData.cs:
	* Gui/NewOverrideCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Refactored
	ambiences/domoutputvisitor.

2008-11-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: taken back last change.

2008-11-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: added strongly typed overloads for getstring.

2008-11-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: Worked on c# ambience.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: fixed some ambience bugs.
